# stechuhr

./: .env  .gitignore  Cargo.toml  LICENSE  autostart.sh  bootstrap.sh  deploy.sh  deploylist.txt  stechuhr.desktop  stechuhr.sqlite3.template  testdata.sql
migrations/2022-02-21-210156_create_events/: down.sql  up.sql
migrations/2022-03-05-054320_create_pw/: up.sql
migrations/2022-05-19-230206_change_staff/: down.sql  up.sql
src/: date_ext.rs  db.rs  icons.rs  lib.rs  main.rs  models.rs  schema.rs  style.rs
src/tabs/: generate.rs  management.rs  mod.rs  statistics.rs  timetrack.rs
src/tabs/statistics/: event_eval.rs  time_eval.rs
