[package]
name = "stechuhr"
version = "0.1.0"
edition = "2021"
default-run = "stechuhr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.4", features = ["tokio", "image"] }
iced_native = { version = "0.5" }
# compiled with commit 045e16df2706b938ebf657ad2f18a08f48496bcf
iced_aw = { git = "https://github.com/iced-rs/iced_aw", branch = "main", default-features = false, features = ["modal", "colors", "card", "tabs", "date_picker", "tab_bar"] }
chrono = { version = "0.4", features = ["unstable-locales", "serde"] }
time = { version = "0.3", features = ["local-offset"] }
diesel = { version = "1.4", features = ["sqlite", "chrono"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde-lexpr = "0.1.0"
csv = "1"
pbkdf2 = { version = "0.10.1", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }
log = "0.4.14"
env_logger = "0.9.0"
regex = "1"
opener = "0.5"